# portfolio

./: .env  Project_Summary_Report.md  build.sh  db.sqlite3  pyproject.toml
portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio/management/commands/: createsuperuser_if_none_exists.py
portfolio/migrations/: 0001_initial.py  0002_contactmessage_service_testimonial.py  0003_certificate_image_skill_image.py  0004_techstack.py  0005_technology_profile_technologies_delete_techstack.py  0006_remove_technology_icon.py  0007_remove_project_tech_stack_project_technologies.py  0008_project_tech_stack.py  0009_alter_resume_resume.py
project/: settings.py  urls.py
static/css/: style.css
templates/: dashboard.html  home.html  login.html  register.html
